--- a/src/scss/_yat.scss
+++ b/src/scss/_yat.scss
@@ -180,6 +180,7 @@
           display: block;
           a {
             display: block;
+            white-space: nowrap;
           }
         }
       }
